# korea-geocoder-mcp

./: README.md  mcp.json  pyproject.toml
korea_geocoder_mcp/: __init__.py  geocoder.py
