[project]
name = "korea-geocoder-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for geocoding Korean addresses using Google Maps API"
readme = "README.md"
authors = [
    {name = "wowzoo", email = "wowzoo@gmail.com"},
]
license = {file = "LICENSE"}
keywords = ["mcp", "geocoding", "korea", "address", "coordinates"]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.10.1",
    "googlemaps>=4.10.0",
    "requests>=2.32.4",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.scripts]
korea-geocoder-mcp = "korea_geocoder_mcp:main"

[project.urls]
Homepage = "https://github.com/wowzoo/korea-geocoder-mcp"
Repository = "https://github.com/wowzoo/korea-geocoder-mcp"
Issues = "https://github.com/wowzoo/korea-geocoder-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
